# Simple-Version-Control

./: CMakeLists.txt  func_decs.c  params.h  svc.c  svc.h
branch/: branch.c  branch.h  branch.h.gch
commit/: commit.c  commit.h  commit.h.gch
file_data/: file_data.c  file_data.h  file_data.h.gch
memory/: memory.h  memory.h.gch  safe_alloc.c  string_copy.c
snapshot/: snapshot.c  snapshot.h  snapshot.h.gch
